08-Certificates/01.1-congresofoss-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-v1
  template:
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
      - name: hello
        #image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        image: elcorreodeyamil/congresofoss:v1
        imagePullPolicy: IfNotPresent        
        ports:
        #- containerPort: 8080
        - containerPort: 5000
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "50m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "100m"

---

kind: Service
apiVersion: v1
metadata:
  name: hello-v1-svc
spec:
  selector:
    app: hello-v1
  ports:
  - protocol: TCP
    port: 80
    #targetPort: 8080
    targetPort: 5000
