08-Certificates/02.Esri.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-v1
  template:
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
      - name: hello
        image: esridocker/arcgis-api-python-notebook:latest
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8888
        resources:
          requests:
            memory: "8Mi"
            cpu: "50m"
          limits:
            memory: "20Mi"
            cpu: "100m"

---

kind: Service
apiVersion: v1
metadata:
  name: hello-v1-svc
spec:
  selector:
    app: hello-v1
  ports:
  - protocol: TCP
    port: 80
    #targetPort: 8080
    targetPort: 8888
