08-Certificates/02-hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hello.peladonerd.com
    http:
      paths:
      - path: /
        pathType: Prefix
      backend:
        service:
          name: hello-v1-svc
          port: 
            number: 80
