08-Certificates/04-hello-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - hello.congresofoss.com
    secretName: hello-tls
  rules:
  - host: hello.congresofoss.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port: 
              number: 80
